--- a/index.html
+++ b/index.html
@@ -1,186 +1,165 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>アウトボタン＋秒数リセット連打対応</title>
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      background-color: #f8f8f8;
-      font-family: Arial, sans-serif;
-      overflow: hidden;
-      position: relative;
-    }
+<meta charset="UTF-8">
+<title>笑ってはいけない アウトボタン（完全版）</title>
 
-    #outButton {
-      width: 80vw;
-      height: 50vh;
-      font-size: 5rem;
-      background-color: red;
-      color: white;
-      border: none;
-      border-radius: 20px;
-      cursor: pointer;
-      transition: transform 0.1s;
-      user-select: none;
-      z-index: 1;
-    }
+<style>
+body {
+  margin: 0;
+  height: 100vh;
+  background: #ffffff;
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
 
-    #outButton:active {
-      transform: scale(0.95);
-    }
+#message {
+  font-size: 3.5rem;
+  font-weight: bold;
+  color: #000;
+}
 
-    #message {
-      position: absolute;
-      top: 5%;
-      width: 100%;
-      text-align: center;
-      font-size: 6rem;
-      color: red;
-      font-weight: bold;
-      pointer-events: none;
-      z-index: 2;
-    }
+.buttons {
+  width: 94vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 14px;
+}
 
-    .gaugeContainer {
-      position: absolute;
-      bottom: 10%;
-      width: 80vw;
-      height: 30px;
-      background-color: #ccc;
-      border-radius: 15px;
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: bold;
-      color: white;
-      font-family: Arial, sans-serif;
-    }
+.outButton {
+  height: 20vh;
+  font-size: 3rem;
+  background: red;
+  color: white;
+  border: none;
+  border-radius: 18px;
+}
 
-    .gauge {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: red;
-      transition: width 0.05s linear;
-      z-index: 1;
-    }
+.allOut {
+  grid-column: span 2;
+  background: darkred;
+  height: 18vh;
+}
 
-    #gaugeText {
-      position: absolute;
-      bottom: 15%;
-      width: 80vw;
-      text-align: center;
-      font-size: 1.5rem;
-      font-weight: bold;
-      color: black;
-      z-index: 10;
-      pointer-events: none;
-    }
+.gaugeContainer {
+  width: 85vw;
+  height: 26px;
+  background: #ddd;
+  border-radius: 13px;
+  overflow: hidden;
+}
 
-    .confetti {
-      position: absolute;
-      width: 10px;
-      height: 10px;
-      background-color: yellow;
-      opacity: 0.8;
-      pointer-events: none;
-      z-index: 3;
-      border-radius: 50%;
-      animation: fall 2s linear forwards;
-    }
+.gauge {
+  width: 100%;
+  height: 100%;
+  background: red;
+}
 
-    @keyframes fall {
-      0% { transform: translateY(0) rotate(0deg); }
-      100% { transform: translateY(100vh) rotate(360deg); }
-    }
-  </style>
+#gaugeText {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #000;
+}
+</style>
 </head>
+
 <body>
 
-  <div id="message"></div>
-  <button id="outButton">アウト！</button>
-  <div id="gaugeText">2.5s</div> <!-- 残り秒数表示 -->
+<div id="message">アウト！</div>
 
-  <audio id="outAudio" src="ScreenRecording_01-31-2026 17-19-18_1.mp3"></audio>
+<div class="buttons">
+  <button class="outButton" data-name="けいと" data-sound="keito">けいと</button>
+  <button class="outButton" data-name="そら" data-sound="sora">そら</button>
+  <button class="outButton" data-name="和田" data-sound="wada">和田</button>
+  <button class="outButton" data-name="櫻井" data-sound="sakurai">櫻井</button>
+  <button class="outButton allOut" data-name="全員" data-sound="all">
+    全員アウト
+  </button>
+</div>
 
-  <script>
-    const button = document.getElementById('outButton');
-    const message = document.getElementById('message');
-    const audioTemplate = document.getElementById('outAudio');
-    const gaugeText = document.getElementById('gaugeText');
+<div id="gaugeText"></div>
+<div class="gaugeContainer">
+  <div class="gauge" id="gauge"></div>
+</div>
 
-    const duration = 2.5; // 音とゲージの長さ（秒）
-    let startTime = null; // 残り秒数用
-    let interval = null;
+<script>
+/* ===== iOS Safari 音声アンロック ===== */
+let audioUnlocked = false;
+let audioContext = null;
 
-    button.addEventListener('click', () => {
-      message.textContent = "アウト！！！！";
+function unlockAudio() {
+  if (audioUnlocked) return;
+  audioContext = new (window.AudioContext || window.webkitAudioContext)();
+  audioContext.resume();
+  audioUnlocked = true;
+}
 
-      // 音を新しいAudioで再生
-      const audio = audioTemplate.cloneNode();
-      audio.currentTime = 0;
-      audio.play();
+/* ===== 音声事前ロード ===== */
+const soundSources = {
+  keito: new Audio("keito.mp3"),
+  sora: new Audio("sora.mp3"),
+  wada: new Audio("wada.mp3"),
+  sakurai: new Audio("sakurai.mp3"),
+  all: new Audio("all.mp3")
+};
 
-      // ゲージは連打対応で独立
-      const gaugeContainer = document.createElement('div');
-      gaugeContainer.classList.add('gaugeContainer');
+for (const k in soundSources) {
+  soundSources[k].preload = "auto";
+}
 
-      const gauge = document.createElement('div');
-      gauge.classList.add('gauge');
-      gaugeContainer.appendChild(gauge);
-      document.body.appendChild(gaugeContainer);
+/* ===== UI ===== */
+const buttons = document.querySelectorAll('.outButton');
+const message = document.getElementById('message');
+const gauge = document.getElementById('gauge');
+const gaugeText = document.getElementById('gaugeText');
 
-      const gaugeStartTime = Date.now();
-      const gaugeInterval = setInterval(() => {
-        const elapsed = (Date.now() - gaugeStartTime) / 1000;
-        const percent = Math.max(0, 100 - (elapsed / duration) * 100);
-        gauge.style.width = percent + "%";
-        if (elapsed >= duration) {
-          clearInterval(gaugeInterval);
-          gaugeContainer.remove();
-          createConfetti();
-        }
-      }, 50);
+const DURATION = 4;
+let startTime = 0;
+let timer = null;
 
-      // 残り秒数は1つだけ更新、連打でリセット
-      startTime = Date.now();
+buttons.forEach(btn => {
+  btn.onclick = () => {
+    unlockAudio(); // ★最重要（最初の1回）
 
-      if (!interval) {
-        interval = setInterval(() => {
-          const elapsed = (Date.now() - startTime) / 1000;
-          const remaining = Math.max(0, duration - elapsed);
-          gaugeText.textContent = remaining.toFixed(1) + "s";
-          if (remaining <= 0) {
-            gaugeText.textContent = "";
-            clearInterval(interval);
-            interval = null;
-          }
-        }, 50);
-      }
-    });
+    const name = btn.dataset.name;
+    const key = btn.dataset.sound;
 
-    function createConfetti() {
-      for (let i = 0; i < 50; i++) {
-        const confetti = document.createElement('div');
-        confetti.classList.add('confetti');
-        confetti.style.left = Math.random() * window.innerWidth + "px";
-        confetti.style.backgroundColor = `hsl(${Math.random()*360}, 100%, 50%)`;
-        confetti.style.width = Math.random() * 12 + 5 + "px";
-        confetti.style.height = confetti.style.width;
-        confetti.style.animationDuration = 1 + Math.random()*1.5 + "s";
-        document.body.appendChild(confetti);
-        confetti.addEventListener('animationend', () => confetti.remove());
-      }
+    message.textContent = name + " OUT！";
+
+    /* ===== 確実再生（cloneNode方式） ===== */
+    const audio = soundSources[key].cloneNode(true);
+    audio.currentTime = 0;
+    audio.play().catch(() => {});
+
+    /* ===== タイマーリセット ===== */
+    startTime = Date.now();
+    gauge.style.width = "100%";
+
+    if (!timer) {
+      timer = setInterval(update, 60); // 軽量更新
     }
-  </script>
+  };
+});
+
+function update() {
+  const elapsed = (Date.now() - startTime) / 1000;
+  const remain = DURATION - elapsed;
+
+  if (remain <= 0) {
+    gauge.style.width = "0%";
+    gaugeText.textContent = "";
+    clearInterval(timer);
+    timer = null;
+    return;
+  }
+
+  gauge.style.width = (remain / DURATION * 100) + "%";
+  gaugeText.textContent = remain.toFixed(1) + "s";
+}
+</script>
 
 </body>
 </html>
