--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ body {
   <div class="grid">
     <button class="btn red" data-key="pon">学校のチャイム</button>
     <button class="btn red" data-key="don">茶番終了</button>
-    <button class="btn red" data-key="news">ニュースbgm</button>
+    <button class="btn red" data-key="news">意味無い</button>
     <button class="btn gray" id="stopAll">全停止</button>
   </div>
 </div>
@@ -178,7 +178,7 @@ const sounds = {
   all: new Audio("all.mp3"),
   pon: new Audio("school_song.mp3"),
   don: new Audio("chan.mp3"),
-  news: new Audio("news.mp3")
+  news: new Audio("")
 };
 
 sounds.bgm.loop = true;
