--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {
 }
 
 .tab.active {
-  background: red;
+  background: rgb(13, 126, 255);
   color: white;
 }
 
@@ -120,10 +120,10 @@ body {
 
     <!-- 追加メンバー（青） -->
     <button class="btn blue" data-key="tanaka">デデーン</button>
-    <button class="btn blue" data-key="matsumoto">けいとだけ</button>
-    <button class="btn blue" data-key="hamada">櫻井だけ</button>
-    <button class="btn blue" data-key="yamazaki">そらだけ</button>
-    <button class="btn blue" data-key="endo">和田だけ</button>
+    <button class="btn blue" data-key="matsumoto">③けいとだけ</button>
+    <button class="btn blue" data-key="hamada">④櫻井だけ</button>
+    <button class="btn blue" data-key="yamazaki">①そらだけ</button>
+    <button class="btn blue" data-key="endo">②和田だけ</button>
 
     <!-- 特別枠（緑） -->
     <button class="btn green" data-key="special">アウトだけ</button>
